[package]
name = "ananc"
version = "0.14.2"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "Anansi's project manager."
homepage = "https://saru-tora.github.io/anansi"
repository = "https://github.com/saru-tora/anansi"
readme = "README.md"
categories = ["web-programming", "command-line-utilities"]
keywords = ["http", "web", "framework"]

[dependencies]
which = "4.3.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full", "fold" ]}
quote = "1.0"
toml = "0.5"
