[package]
name = "anansi-core"
version = "0.2.0"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "Anansi's core."
homepage = "https://saru-tora.github.io/anansi"
repository = "https://github.com/saru-tora/anansi"
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anansi-macros = { path = "../anansi-macros" , version = "0.2.0" }
syn = { version = "1.0", features = [ "full", "fold" ]}
quote = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
sha2 = "0.10.2"
async-trait = "0.1.57"
toml = "0.5"
