[package]
name = "anansi-core"
version = "0.12.0"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "Anansi's core."
homepage = "https://saru-tora.github.io/anansi"
repository = "https://github.com/saru-tora/anansi"
categories = ["web-programming", "asynchronous"]

[features]
default = []
minimal = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
redis = ["dep:redis"]

[dependencies]
anansi-macros = { path = "../anansi-macros" , version = "0.12.0" }
syn = { version = "1.0", features = [ "full", "fold" ]}
quote = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "chrono" ] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
sha2 = "0.10.2"
async-trait = "0.1.57"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
http-body-util = "0.1.0-rc.1"
hyper = { version = "1.0.0-rc.1", features = ["http1", "server"] }
log = "0.4.0"
env_logger = "0.9.0"
chrono = { version = "0.4.23", features = ["serde"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
redis = { version = "0.22.1", features = ["aio", "tokio-comp"], optional = true }
