[package]
name = "anansi"
version = "0.12.0"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "A simple full-stack web framework for Rust."
homepage = "https://saru-tora.github.io/anansi"
repository = "https://github.com/saru-tora/anansi"
readme = "README.md"
categories = ["web-programming", "asynchronous"]
keywords = ["http", "web", "framework", "async"]

[features]
default = ["dep:oauth2", "dep:totp-rs", "dep:pbkdf2", "dep:rpassword"]
sqlite = ["anansi-core/sqlite"]
postgres = ["anansi-core/postgres"]
redis = ["anansi-core/redis"]
minimal = ["anansi-core/minimal"]

[dependencies]
anansi-core = { path = "../anansi-core", version = "0.12.0" }
async-trait = "0.1.57"
async-recursion = "1.0.0"
serde_json = "1.0"
pbkdf2 = {version = "0.10", optional = true}
rpassword = {version = "7.0", optional = true}
oauth2 = {version = "4.3.0", optional = true}

[dependencies.totp-rs]
version = "^3.0"
features = ["qr"]
optional = true
